temp: add total_amt_msat
