# lnrpc/routerrpc/router.swagger.json
@@ -883,6 +883,10 @@
           "type": "string",
           "format": "byte",
           "description": "Encrypted data is a receiver-produced blob of data that provides hops\nin a blinded route with forwarding data. As this data is encrypted by\nthe recipient, we will not be able to parse it - it is essentially an\narbitrary blob of data from our node's perspective. This field is\nmandatory for all hops in a blinded path, including the introduction\nnode."
+        },
+        "blinded_route_total": {
+          "type": "string",
+          "format": "uint64"
         }
       }
     },
